2000-11-21 John R. Jackson  <jrj@purdue.edu>

	* server-src/amcheck.c: Minor message wording changes.

2000-11-21 John R. Jackson  <jrj@purdue.edu>

	* configure.in: Forgot to check in this part of new amgetconf.8.in.

2000-11-21 John R. Jackson  <jrj@purdue.edu>

	* contrib/sst/README.Amanda: New file of Amanda specific sst notes.
	* contrib/sst/sst.c: Attempt at letting gcc compile sst.

2000-11-21 John R. Jackson  <jrj@purdue.edu>

	* man/amgetconf.8.in: New man page.
	* man/Makefile.am: Add support for amgetconf.8.in.
	* man/amadmin.8.in: Update for 2.4.2 and do general cleanup.
	* man/amanda.8.in: Ditto.
	* man/amcheck.8.in: Ditto.
	* man/amcheckdb.8.in: Ditto.
	* man/amcleanup.8.in: Ditto.
	* man/amdump.8.in: Ditto.
	* man/amflush.8.in: Ditto.
	* man/amlabel.8.in: Ditto.
	* man/amrecover.8.in: Ditto.
	* man/amreport.8.in: Ditto.
	* man/amrestore.8: Ditto.
	* man/amrmtape.8.in: Ditto.
	* man/amstatus.8.in: Ditto.
	* man/amtape.8: Ditto.
	* man/amtoc.8.in: Ditto.
	* man/amverify.8.in: Ditto.

2000-11-21 John R. Jackson  <jrj@purdue.edu>

	* contrib/sst/sst.c (sst_ioctl): Allow non-root users to use sst.

2000-11-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amdump.sh.in: exit if amgetconf exit with status != 0.
	* server-src/amcleanup.sh.in: ditto
	* server-src/amstatus.pl.in: ditto

2000-11-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (start_some_dumps): don't check free_kps if
	curusage == 0.
	* server-src/driver.c (free_kps): remove the kludge.

2000-11-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/conffile.c: It's an error to have a negative chunksize.
	* man/amanda.8.in: remove documentation of negative chunksize.
	* example/amanda.conf.in: ditto
	* example/amanda.conf.chg-scsi.in:ditto
	* NEWS: negative chunksize is no longer supported.

2000-11-03 John R. Jackson  <jrj@purdue.edu>

	* server-src/driver.c (handle_taper_result): the holding disk entry